--- a/Scripture.html
+++ b/Scripture.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/u">bootstrap website templates</a></section><section class="header8 cid-r2PyirRDBK mbr-fullscreen mbr-parallax-background" id="header8-c">
+<section class="engine"><a href="https://mobiri.se/s">free bootstrap theme</a></section><section class="header8 cid-r2PyirRDBK mbr-fullscreen mbr-parallax-background" id="header8-c">
 
     
 
