--- a/Symbology.html
+++ b/Symbology.html
@@ -61,7 +61,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobiri.se/h">how to create your own web page</a></section><section class="cid-r2PAkpPcu8 mbr-fullscreen mbr-parallax-background" id="header2-e">
+<section class="engine"><a href="https://mobiri.se/g">how to build a website for free</a></section><section class="cid-r2PAkpPcu8 mbr-fullscreen mbr-parallax-background" id="header2-e">
 
     
 
